	* Added Misc.author, a command for finding out which author
	claims a particular plugin.
	
	* Added Topic.lock and Topic.unlock, for locking and unlocking
	the topic.

	* Added Topic.restore, for restoring the topic to the last-sent
	topic.  Useful for when people change your carefully crafted
	topic through means other than the bot.
	
	* Changed supybot.brackets so you can now provide the empty
	string, which means you cannot do nesting with brackets.
	
	* Added Anonymous, a plugin for anonymously saying things to a
	channel.
	
	* Added Utilities.last, which replies with the last string
	given.  This is useful for sequencing commands and then replying
	with the output of the last commnad.

	* Updated RSS.info to accept a feed name as well as a url.

	* Added a signal handler for SIGTERM, so you folks killing your
	bots uncleanly won't have as many bugs :)
	
	* Added a new configuration variable, supybot.pidFile, which
	determines what file the bot should write its PID to.  The
	default is not to write the PID file at all.

	* Added a comma argument to utils.commaAndify, which specifies the
	character to use in place of the comma.

	
2004-04-16  Jeremy Fincher  <jemfinch@supybot.org>
	
	* Version 0.77.2!
	
	* Fixed numerous bugs, high and low, big and small and
	in-between.  Definitely worthy of a release.
	
	* Added supybot.plugins.ChannelLogger.includeNetworkName, so the
	logs aren't strangified when relaying between channels.
	
	* Added a --capability option to User.list, to allow people to
	list all the users possessing a certain capability.  The main
	reason this was added is so jemfinch can tell who owns which
	Supybots on #supybot :)
	
	* Added Utilities.success, mostly for making aliases such that
	they can respond with success if no errors were encountered in
	any nested commands.
	
	* Changed the name of the new filter, colorstrip, to be
	stripcolor.  Better now than after it was highly established :)
	
	* Added configuration variables